WHITE-PAPER/reviewers/packages/v3/funding/PACKAGE_MANIFEST.md
# Review Package: FUNDING

**Generated:** 2025-12-26 02:07:58
**Target Venue:** NSF / DARPA / Open Philanthropy
**Total Size:** 99.0 KB
**Total Files:** 9

---

## Description

Funding proposal package (NSF/DARPA)

---

## Reading Order

Start with these files in order:

1. `submissions/funding/README.md`
2. `submissions/funding/LLM_Project_Nyquist_Consciousness.md`
3. `theory/MINIMUM_PUBLISHABLE_CLAIMS.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 3 files | 44.7 KB |
| theory/ | 2 files | 27.0 KB |
| guides/ | 2 files | 21.6 KB |
| planning/ | 2 files | 5.6 KB |

**Total:** 9 files, 99.0 KB

---

## File Listing

### submissions/

- `submissions\funding\FUNDING_FINAL.md` (19.0 KB)
- `submissions\funding\LLM_Project_Nyquist_Consciousness.md` (21.2 KB)
- `submissions\funding\README.md` (4.6 KB)

### theory/

- `theory\B-CRUMBS.md` (16.9 KB)
- `theory\MINIMUM_PUBLISHABLE_CLAIMS.md` (10.1 KB)

### guides/

- `guides\REPRODUCIBILITY_README.md` (10.2 KB)
- `guides\summary_statistics.md` (11.5 KB)

### planning/

- `planning\METHODOLOGY_DOMAINS.md` (1.9 KB)
- `planning\NOVAS_OVERCLAIMING_PREVENTION.md` (3.6 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for NSF / DARPA / Open Philanthropy submission review.*